--- a/mundo.html
+++ b/mundo.html
@@ -15,7 +15,7 @@
         <h1><a name="topo">Bem</a> vindo a Azeroth!</h1>
     </header>
     <nav>
-        <a href="idex.html" target="_self">Home</a>
+        <a href="index.html" target="_self">Home</a>
         <a href="mundo.html" target="_self">Mundo</a>
         <a href="horda.html" target="_self">Horda</a>
         <a href="alianca.html" target="_self">Aliança</a>
